#466 fixed bug with collapsing menu items when they are in min mode, and added slate admin theme

--- a/themes/default/css/admin-styles.css
+++ b/themes/default/css/admin-styles.css
@@ -22,9 +22,54 @@ li.sbp .caret{float: right;margin-top: 7px;}
 	position: relative;
 	min-height: 950px;
 }
+
+/*WIDGET VIEW*/
+body.dragging, body.dragging * {
+  cursor: move !important;
+}
+.dragged {
+    position: absolute;
+    top: 0;
+    opacity: .5;
+    z-index: 2000;
+}
+
+ul.plholder li.liholder{
+    cursor: move !important;
+    display: block;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid #CCC;
+    color: white;
+    background: gray;
+    width: 90%;
+}
+
+ul.plholder li.placeholder{
+    position: relative;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+ul.plholder li.placeholder:before {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    margin-top: -5px;
+    left: -5px;
+    top: -4px;
+    border: 5px solid transparent;
+    border-left-color: red;
+    border-right: none;
+    color: red;
+}
 /*HEADER*/
 .header-container{padding: 0px 20px 0px 0px;}
 .navbar-nav li:hover{border-bottom: 3px solid #46b8da;}
+.nav.navbar-nav li a , .navbar-brand{color: #fff!important;}
+
 
 /*Sidebar*/
 .btn-colapse-sidebar{cursor: pointer;}
@@ -34,9 +79,6 @@ li.sbp .caret{float: right;margin-top: 7px;}
 li.sbp.active{border-right: none;}
 li.sbp:hover{border-right: none;}
 
-i.pos {
-	padding: 0px 0px 0px 1px;
-}
 .respon-left-panel {
 	z-index: 1;
 	position: absolute;
@@ -55,6 +97,7 @@ i.pos {
 }
 .respon-left-panel li a {
 	color:#000;
+	padding: 10px 9px;
 }
 .respon-left-panel li a:hover {
 	color:#000;
@@ -67,63 +110,22 @@ i.pos {
 .miniclose{
 
 }
-/*WIDGET VIEW*/
-body.dragging, body.dragging * {
-          cursor: move !important;
-        }
-        .dragged {
-            position: absolute;
-            top: 0;
-            opacity: .5;
-            z-index: 2000;
-        }
 
-        ul.plholder li.liholder{
-            cursor: move !important;
-            display: block;
-            margin: 5px;
-            padding: 5px;
-            border: 1px solid #CCC;
-            color: white;
-            background: gray;
-            width: 90%;
-        }
-    
-        ul.plholder li.placeholder{
-            position: relative;
-            margin: 0;
-            padding: 0;
-            border: none;
-        }
-
-        ul.plholder li.placeholder:before {
-            position: absolute;
-            content: "";
-            width: 0;
-            height: 0;
-            margin-top: -5px;
-            left: -5px;
-            top: -4px;
-            border: 5px solid transparent;
-            border-left-color: red;
-            border-right: none;
-            color: red;
-        }
 /*colapsable sidebar*/
 .sidebar-nav .nav.nav-list.side-ul.hide{
 
 }
 .respones-colapse{
-	width: 50px!important;
-	min-width: 50px;
+	width: 18px!important;
+	min-width: 35px;
 	float: left;
 }
 
-.submenu {display: none; list-style: none;}
+.submenu {display: none; list-style: disc;}
 .submenu.active{display: block;}
-.submenu li.active a{text-decoration: underline; font-weight:bold;}
+.submenu li.active a{text-decoration: underline; font-weight:bold;list-style-type: amharic;}
 .submenu li a{border-right: 0px !important;}
-.mini-col .submenu.active{ position: absolute;top: 7px;left: 1px; border: 1px solid #e3e3e3; background: #fff; padding: 4px 0px 3px 2px;margin-left: 47px; min-width: 155px; border-radius: 0px 5px 5px 0px;}
+.mini-col .submenu.active{ position: absolute;top: 7px; left: -14px; border: 1px solid #e3e3e3; background: #fff; padding: 4px 0px 3px 2px;margin-left: 47px; min-width: 155px; border-radius: 0px 5px 5px 0px;}
 .mini-col .submenu.active li {
     /* min-width: 155px; */
     padding-right: 50px;
